--- a/project1/index.html
+++ b/project1/index.html
@@ -25,7 +25,7 @@ title: Project 1
 	<br><br>
 	<img src="/assets/img/speech.PNG">
 	<br><br>
-	For the prototype the command “next” can be used to move to the next image. Voice listening was activated when the image was changed. This was unintuitive and clumsy for users. For a more robust execution I would want a dedicated action that activates the voice prompt.
+	For the prototype the command “next” can be used to move to the next image. Voice listening was activated when the image was changed. This was unintuitive and clumsy for users. For a more robust execution I would want a dedicated action that activates the voice prompt. Such as using the looking down gesture to activate the voice prompt,  allowing for a more complex control scheme built around speech recognition.
 	</p>
 	
 	
