--- a/project1/index.html
+++ b/project1/index.html
@@ -75,7 +75,7 @@ title: Project 1
 	<p>
 	The solution I implemented was to have a shared timer on the MainActivity that drives the logic of the application. The current tool’s fragment is stored in the testFrag variable of type IVisualTest Each cycle the timer thread is paused for a preset delay, then I use runOnUiThread() to run current fragment’s Run() function. This makes the outer logic loop generic across all the different test tools. This system is very scalable, I can easily change the current test tool and add new tools without modifying the main timer loop. 
 	<br><br>	
-	<img src="/assets/img/model.PNG">
+	<img src="/assets/img/loop.PNG">
 	<br><br>
 	</p>
 			
