--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@ title: Liam Harris
 							<nav>
 								<ul class="nav masthead-nav">
 									<li class="active"><a href="/">Home</a></li>
-									<li><a href="/project1">Project 1</a></li>
-									<!-- <li><a href="/about">About</a></li>
-									<li><a href="/cv">CV</a></li>
-									<li><a href="/blog">Blog</a></li> -->
+									<li><a href="/academic">Academic</a></li>
+									<li><a href="/android">Android</a></li>
+
 								</ul>
 							</nav>
 						</div>
