--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: Liam Harris
 							<nav>
 								<ul class="nav masthead-nav">
 									<li class="active"><a href="/">Home</a></li>
-									<li><a href="/academic">Academic</a></li>
+									<li><a href="/education">Education</a></li>
 									<li><a href="/android">Android</a></li>
 
 								</ul>
