--- a/education/index.html
+++ b/education/index.html
@@ -6,6 +6,6 @@ title: Education
 	
 	<h1>Education</h1>
 	
-	{{ site.baseurl }}/education/Liam_Harris_NZQA_Results.pdf
-		
+	<a href=".Liam_Harris_NZQA_Results.pdf">Education</a>	
+	
 </div><!-- /.blurb -->
