--- a/education/index.html
+++ b/education/index.html
@@ -6,6 +6,8 @@ title: Education
 	
 	<h1>Education</h1>
 	
-	<a href="Liam_Harris_NZQA_Results.pdf">Education</a>
+	<a href="Liam_Harris_NZQA_Results.pdf">Taieri College</a>
+	
+	<a href="Liam_Harris_NZQA_Results.pdf">Otago Polytechnic</a>
 	
 </div><!-- /.blurb -->
