--- a/education/index.html
+++ b/education/index.html
@@ -8,6 +8,6 @@ title: Education
 	
 	<a href="Liam_Harris_NZQA_Results.pdf">Taieri College</a>
 	
-	<a href="Liam_Harris_NZQA_Results.pdf">Otago Polytechnic</a>
+	<a href="Liam_Harris_OP_Results.pdf">Otago Polytechnic</a>
 	
 </div><!-- /.blurb -->
