--- a/education/index.html
+++ b/education/index.html
@@ -6,9 +6,9 @@ title: Education
 	
 	<h1>Education</h1>
 	
-	<h2><a href="Liam_Harris_NZQA_Results.pdf">Taieri College</a> <small>2008-2014</small> </h2>
+	<a href="Liam_Harris_NZQA_Results.pdf"> <h2>Taieri College <small>2008-2014</small> </h2> </a>
 	
-	<h2><a href="Liam_Harris_OP_Results.pdf">Otago Polytechnic</a> <small>From 2015</small> </h2>
+	<h2> <a href="Liam_Harris_OP_Results.pdf">Otago Polytechnic <small>From 2015</small> </a> </h2> 
 	
 	<br><br>
 	<a href="Liam_Harris_OP_Results.pdf">Otago Polytechnic</a>
