--- a/android/index.html
+++ b/android/index.html
@@ -6,4 +6,8 @@ title: Project 1
 	
 	<h1>Android</h1>
 	
+	<div class="container-fluid">
+	  	<img src="/assets/img/speech.PNG">
+	</div>
+	
 </div><!-- /.blurb -->
