--- a/android/index.html
+++ b/android/index.html
@@ -6,8 +6,10 @@ title: Project 1
 	
 	<h1>Android</h1>
 	
+	<h2>Nearby Sites</h2>
+	
 	<div class="container-fluid">
-	  	<img src="/assets/img/speech.PNG">
+	  	<img src="/assets/img/nearby_sites/menu1.PNG">
 	</div>
 	
 </div><!-- /.blurb -->
