--- a/android/index.html
+++ b/android/index.html
@@ -9,7 +9,7 @@ title: Android
 	<h2>Nearby Sites</h2>
 	
 	<div class="container-fluid">
-	  	<img src="/assets/img/nearby_sites/menu1.PNG">
+	  	<img src="/assets/img/nearby_sites/menu1.png">
 	</div>
 	
 </div><!-- /.blurb -->
