--- a/android/index.html
+++ b/android/index.html
@@ -7,6 +7,8 @@ title: Android
 	<h1>Android</h1>
 	
 	<h2>Nearby Sites</h2>
+	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.</p>
+	<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> 
 	
 	<div class="container-fluid">
 	  	<img src="/assets/img/nearby_sites/menu1.png">
