--- a/android/index.html
+++ b/android/index.html
@@ -7,11 +7,22 @@ title: Android
 	<h1>Android</h1>
 	
 	<h2>Nearby Sites</h2>
-	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.</p>
-	<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> 
+	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
+	<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> </p>
 	
-	<div class="container-fluid">
-	  	<img src="/assets/img/nearby_sites/menu1.png">
-	</div>
+	<figure>
+		<img src="/assets/img/nearby_sites/menu2.png">
+		<figcaption> Use the slider to adjust the search radius </figcaption>
+	</figure>
+		
+	<figure>
+		<img src="/assets/img/nearby_sites/menu1.png">
+		<figcaption> The nearby sites identified are listed </figcaption>
+	</figure>
 	
+	<figure>
+		<img src="/assets/img/nearby_sites/details.png">
+		<figcaption> Selecting an item shows additional details </figcaption>
+	</figure>
+		
 </div><!-- /.blurb -->
