--- a/android/index.html
+++ b/android/index.html
@@ -10,6 +10,31 @@ title: Android
 	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
 	<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> </p>
 	
+	<table>
+		
+		<tr>
+			<figure>
+				<img src="/assets/img/nearby_sites/menu2.png">
+				<figcaption> Use the slider to adjust the search radius </figcaption>
+			</figure>	
+		</tr>
+		
+		<tr>
+			<figure>
+				<img src="/assets/img/nearby_sites/menu1.png">
+				<figcaption> Use the slider to adjust the search radius </figcaption>
+			</figure>	
+		</tr>
+		
+		<tr>
+			<figure>
+				<img src="/assets/img/nearby_sites/details.png">
+				<figcaption> Use the slider to adjust the search radius </figcaption>
+			</figure>	
+		</tr>
+		
+	</table>
+	
 	<figure>
 		<img src="/assets/img/nearby_sites/menu2.png">
 		<figcaption> Use the slider to adjust the search radius </figcaption>
