--- a/android/index.html
+++ b/android/index.html
@@ -10,7 +10,7 @@ title: Android
 	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
 	<a href="https://drive.google.com/file/d/0B4oAfWQrOmHieWdQRHVUbGhpMU0/view">apk</a> </p>
 	
-	<table>	
+	<table id="Nearby_Sites_Table">	
 		<tr>
 			
 			<td>
