--- a/android/index.html
+++ b/android/index.html
@@ -15,7 +15,7 @@ title: Android
 			
 			<td>
 				<figure>
-					<img src="/assets/img/nearby_sites/menu2.png">
+					<img src="/assets/img/nearby_sites/menu2.png" width="33px">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
 			</td>
