--- a/android/index.html
+++ b/android/index.html
@@ -15,21 +15,21 @@ title: Android
 			
 			<td>
 				<figure>
-					<img src="/assets/img/nearby_sites/menu2.png" width="33px">
+					<img src="/assets/img/nearby_sites/menu2.png" width="100%">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
 			</td>
 			
 			<td>
 				<figure>
-					<img src="/assets/img/nearby_sites/menu1.png">
+					<img src="/assets/img/nearby_sites/menu1.png" width="100%">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
 			</td>
 	
 			<td>
 				<figure>
-					<img src="/assets/img/nearby_sites/details.png">
+					<img src="/assets/img/nearby_sites/details.png" width="100%">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
 			</td>
