--- a/android/index.html
+++ b/android/index.html
@@ -36,5 +36,10 @@ title: Android
 			
 		</tr>	
 	</table>
+	
+	<br>
+	
+	<h2>Vision Tool</h2>
+	<p>This application is a suite of tools designed to aid people with impaired vision</p>
 		
 </div><!-- /.blurb -->
