--- a/android/index.html
+++ b/android/index.html
@@ -41,5 +41,10 @@ title: Android
 	
 	<h2>Vision Tool</h2>
 	<p>This application is a suite of tools designed to aid people with impaired vision</p>
+	
+	<figure>
+		<img src="/assets/img/vision_tool/drawer.png">
+		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+	</figure>
 		
 </div><!-- /.blurb -->
