--- a/android/index.html
+++ b/android/index.html
@@ -5,6 +5,7 @@ title: Android
 <div class="content">
 	
 	<h1>Android</h1>
+	<br>
 	
 	<h2>Nearby Sites</h2>
 	<p>This is the application I made for an individual assignment. The application uses the Google Places API to find businesses and tourist attractions around you.
@@ -43,7 +44,7 @@ title: Android
 	<p>This application is a suite of tools designed to aid people with impaired vision</p>
 	
 	<figure>
-		<img src="/assets/img/vision_tool/drawer.png">
+		<img src="/assets/img/vision_tool/drawer.PNG">
 		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
 	</figure>
 		
