--- a/android/index.html
+++ b/android/index.html
@@ -47,5 +47,20 @@ title: Android
 		<img src="/assets/img/vision_tool/drawer.PNG">
 		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
 	</figure>
+	
+	<figure>
+		<img src="/assets/img/vision_tool/menu.PNG">
+		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+	</figure>
+	
+	<figure>
+		<img src="/assets/img/vision_tool/tool_list.PNG">
+		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+	</figure>
+	
+	<figure>
+		<img src="/assets/img/vision_tool/directional.PNG">
+		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+	</figure>
 		
 </div><!-- /.blurb -->
