--- a/android/index.html
+++ b/android/index.html
@@ -42,32 +42,34 @@ title: Android
 	<br><br>
 	
 	
-	
-	<h2>Vision Tool</h2>
-	<p>This application is a suite of tools designed to aid people with impaired vision</p>
-	
-	<figure>
-		<img src="/assets/img/vision_tool/menu.PNG">
-		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
-	</figure>
-	<br>
-	
-	<figure>
-		<img src="/assets/img/vision_tool/tool_list.PNG">
-		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
-	</figure>
-	<br>
-	
-	<figure>
-		<img src="/assets/img/vision_tool/directional.PNG">
-		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
-	</figure>
-	<br>
-	
-	<figure>
-		<img src="/assets/img/vision_tool/drawer.PNG">
-		<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
-	</figure>
+	<div id="Vision_Tools">	
+		
+		<h2>Vision Tool</h2>
+		<p>This application is a suite of tools designed to aid people with impaired vision</p>
+
+		<figure>
+			<img src="/assets/img/vision_tool/menu.PNG">
+			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+		</figure>
+		<br>
+
+		<figure>
+			<img src="/assets/img/vision_tool/tool_list.PNG">
+			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+		</figure>
+		<br>
+
+		<figure>
+			<img src="/assets/img/vision_tool/directional.PNG">
+			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+		</figure>
+		<br>
+
+		<figure>
+			<img src="/assets/img/vision_tool/drawer.PNG">
+			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+		</figure>
+	</div>
 	
 	
 </div><!-- /.blurb -->
