--- a/android/index.html
+++ b/android/index.html
@@ -49,13 +49,13 @@ title: Android
 
 		<figure>
 			<img src="/assets/img/vision_tool/menu.PNG">
-			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+			<figcaption> The application launches to the main menu </figcaption>
 		</figure>
 		<br>
 
 		<figure>
 			<img src="/assets/img/vision_tool/tool_list.PNG">
-			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+			<figcaption> All the available tools are listed. When the user selects a tool, additional details are displayed </figcaption>
 		</figure>
 		<br>
 
@@ -67,7 +67,7 @@ title: Android
 
 		<figure>
 			<img src="/assets/img/vision_tool/drawer.PNG">
-			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
+			<figcaption> The pause menu lets the user save their results and return to a previous screen. The menu is in a drawer to keep the screen clear so the user can focus on the test </figcaption>
 		</figure>
 	</div>
 	
