--- a/android/index.html
+++ b/android/index.html
@@ -64,6 +64,7 @@ title: Android
 
 		<figure>
 			<img src="/assets/img/vision_tool/drawer.PNG">
+			<div id="White_Line">
 			<figcaption> The pause menu lets the user save their results and return to a previous screen. The menu is in a drawer to keep the screen clear so the user can focus on the test </figcaption>
 		</figure>
 	</div>
