--- a/android/index.html
+++ b/android/index.html
@@ -49,16 +49,19 @@ title: Android
 
 		<figure>
 			<img src="/assets/img/vision_tool/menu.PNG">
+			<div id="White_Line"> </div>
 			<figcaption> The application launches to the main menu </figcaption>
 		</figure>
 
 		<figure>
 			<img src="/assets/img/vision_tool/tool_list.PNG">
+			<div id="White_Line"> </div>
 			<figcaption> All the available tools are listed. When the user selects a tool, additional details are displayed </figcaption>
 		</figure>
 
 		<figure>
 			<img src="/assets/img/vision_tool/directional.PNG">
+			<div id="White_Line"> </div>
 			<figcaption> The pause menu is in a drawer to keep the screen clear </figcaption>
 		</figure>
 
