--- a/android/index.html
+++ b/android/index.html
@@ -16,21 +16,21 @@ title: Android
 		<tr>
 			
 			<td>
-				<figure>
+				<figure class="Nearby_Sites_Fig">
 					<img src="/assets/img/nearby_sites/menu2.png" width="100%">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
 			</td>
 			
 			<td>
-				<figure>
+				<figure class="Nearby_Sites_Fig">
 					<img src="/assets/img/nearby_sites/menu1.png" width="100%">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
 			</td>
 	
 			<td>
-				<figure>
+				<figure class="Nearby_Sites_Fig">
 					<img src="/assets/img/nearby_sites/details.png" width="100%">
 					<figcaption> Use the slider to adjust the search radius </figcaption>
 				</figure>	
